@@ -1132,7 +1132,7 @@ CONFIG_PNP_DEBUG_MESSAGES=y
 #
 CONFIG_PNPACPI=y
 CONFIG_BLK_DEV=y
-# CONFIG_BLK_DEV_NULL_BLK is not set
+CONFIG_BLK_DEV_NULL_BLK=y
 CONFIG_BLK_DEV_FD=y
 CONFIG_BLK_DEV_PCIESSD_MTIP32XX=y
 CONFIG_BLK_CPQ_CISS_DA=y
